Tidied up 'my.ant.properties' guidance.
Removed one of the example templates since it's no longer needed, and improved the comments in the remaining file.

--- a/copy-to-my.ant.properties
+++ b/copy-to-my.ant.properties
@@ -1,4 +1,15 @@
+# Copy this file to 'my.ant.properties'.
 #
+# To set a property remove the comment character at the beginning of the line, and
+# change the value after the equals sign.
+#
+# Not all properties need to be set for the tools to work. Some already have a default
+# value that is defined elsewhere in the tools, so a new value only needs to be added
+# when overriding these values. Also, if some part of the build process is not being
+# used (such as uploading documentation to Google AppSpot), then the corresponding
+# parameters don't need to be set.
+#
+
 # Google Code Project
 #
 #gc.username = <your user name>
@@ -16,5 +27,13 @@
 #
 # Selenium RC parameters
 #
-selenium-rc.params = -firefoxProfileTemplate 'path/to/profile'
-selenium-rc.browsers =  '*firefox3 path/to/firefox'
+# Browsers to be used for testing need to be referenced here. If a browser is not on the default
+# path then it will need to be referenced explicitly.
+#
+# MAC OS paths will look something like this:
+#selenium-rc.browsers = *firefox3 /Applications/Firefox3.6.app/Contents/MacOS/firefox-bin
+#selenium-rc.params = -firefoxProfileTemplate 'path/to/profile'
+#
+# Windows paths will look something like this:
+#selenium-rc.browsers = *firefox3 c:/Program Files/Mozilla Firefox/firefox.exe
+#selenium-rc.params = -firefoxProfileTemplate 'path/to/profile'
